--- a/src/components/TrendList/TrendList.scss
+++ b/src/components/TrendList/TrendList.scss
@@ -4,3 +4,12 @@
   overflow-x: auto;
   gap: 1.5rem;
 }
+
+.trenList_title {
+  font-family: Avenir Next Condensed;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 38px;
+  color: #111111;
+}
