--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -7,3 +7,49 @@
   font-family: Avenir;
   line-height: 24px;
 }
+
+.product-detail-preview {
+  display: flex;
+  inline-size: 24.4rem;
+  flex-direction: column;
+}
+
+.product-detail-preview_description {
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: black;
+}
+
+.product-detail-preview_info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.4rem;
+}
+
+.product-detail-preview_name {
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 28px;
+  line-height: 38px;
+  color: #111111;
+}
+
+.product-detail-preview_price {
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 24px;
+  color: #111111;
+}
+
+.product-detail-preview_images {
+  display: flex;
+  gap: 10px;
+}
