--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -18,3 +18,10 @@
     transition: 0.3s;
   }
 }
+
+.spin_container {
+  display: flex;
+  height: 35vw;
+  justify-content: center;
+  align-items: center;
+}
