--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -1,16 +1,18 @@
 .product_page_container {
   display: flex;
   flex-direction: column;
-  gap: 8rem;
 }
 
 .product_info {
   display: flex;
   inline-size: 96vw;
-  flex-direction: row;
   justify-content: space-evenly;
   height: 63rem;
   margin-top: 1.6rem;
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .product_info_details {
@@ -24,6 +26,6 @@
 }
 
 .trend_list_container {
-  margin-bottom: 5rem;
-  padding: 0 5rem 0 5rem;
+  margin-top: 4rem;
+  padding: 0 3rem 0 3rem;
 }
