--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,13 +8,14 @@
 
 .product {
   display: flex;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 8px 15px, rgba(0, 0, 0, 0.22) 0px 5px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px, rgba(0, 0, 0, 0.22) 0px 3px 3px;
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  border-radius: 1rem;
   :hover {
     cursor: pointer;
-    transform: scale(1.03);
+    transform: scale(1.02);
     transition: 0.3s;
   }
 }
