--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -50,15 +50,15 @@
     flex-direction: column;
     height: 62rem;
     width: 90vw;
+    padding: 0 0.2rem 0 0.2rem;
   }
-}
-
-.product_info_details :nth-child(5) {
-  margin-top: 4rem;
 }
 
 .trend_list_container {
   margin-top: 4rem;
   padding: 0 3rem 0 3rem;
   height: 38rem;
+  @media (max-width: 900px) {
+    padding: 0 0.2rem 0 0.2rem;
+  }
 }
