--- a/src/components/CartPreview/CartPreview.scss
+++ b/src/components/CartPreview/CartPreview.scss
@@ -1,13 +1,13 @@
 .cart_preview {
   display: flex;
-  inline-size: 15rem;
+  inline-size: 20rem;
   block-size: 25rem;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   overflow: auto;
   position: absolute;
-  margin-left: -10rem;
+  margin-left: -16rem;
   top: 3.3rem;
   background-color: rgb(252, 252, 252);
   z-index: 1;
@@ -19,10 +19,18 @@
   //outline: 2px solid red;
   border-bottom: 1px solid gainsboro;
   display: flex;
-  justify-content: flex-start;
-  inline-size: 13rem;
+  justify-content: space-evenly;
+  inline-size: 17rem;
   block-size: 5rem;
   gap: 1rem;
   align-items: center;
   padding: 0.5rem;
+}
+
+.cart_preview_row_title {
+  width: 9rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 13px;
 }
