--- a/src/components/CartPreview/CartPreview.scss
+++ b/src/components/CartPreview/CartPreview.scss
@@ -13,6 +13,9 @@
   z-index: 1;
   gap: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  @media (max-width: 768px) {
+    margin-left: -10rem;
+  }
 }
 
 .cart_preview_row {
