Testing CartPreview component.

--- a/src/components/CartPreview/CartPreview.scss
+++ b/src/components/CartPreview/CartPreview.scss
@@ -43,3 +43,10 @@
     color: red;
   }
 }
+
+.cart_preview_no_products {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2rem;
+}
